--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
@@ -27,7 +28,11 @@
     "@ngx-translate/core": "^11.0.1",
     "angular-oauth2-oidc": "^5.0.2",
     "core-js": "^2.5.4",
+    "ngx-jsonapi": "^2.0.2",
+    "ngx-jsonapi-material": "^0.0.22",
+    "ngx-uploader": "^7.1.0",
     "rxjs": "~6.3.3",
+    "saturn-datepicker": "^7.2.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
