--- a/package.json
+++ b/package.json
@@ -18,50 +18,49 @@
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
-    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.1.2",
     "@angular/material": "^8.1.1",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@auth0/angular-jwt": "^2.1.0",
-    "@ngx-formly/core": "^5.0.4",
-    "@ngx-formly/material": "^5.0.4",
+    "@auth0/angular-jwt": "^3.0.0",
+    "@ngx-formly/core": "^5.3.0",
+    "@ngx-formly/material": "^5.3.0",
     "@ngx-translate/core": "^11.0.1",
-    "angular-oauth2-oidc": "^5.0.2",
-    "core-js": "^2.5.4",
-    "ngx-jsonapi": "^2.0.2",
-    "ngx-jsonapi-material": "^0.0.22",
+    "angular-oauth2-oidc": "^8.0.1",
+    "core-js": "^3.1.4",
+    "ngx-jsonapi": "^2.0.3",
+    "ngx-jsonapi-material": "^0.0.38",
     "ngx-uploader": "^7.1.0",
     "rxjs": "~6.5.2",
-    "saturn-datepicker": "^7.2.1",
-    "tslib": "^1.9.0",
+    "saturn-datepicker": "^7.4.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular-devkit/build-ng-packagr": "~0.11.0",
+    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-ng-packagr": "~0.801.2",
     "@angular/cli": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "~3.3.15",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "~12.6.8",
+    "codelyzer": "~5.1.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.2.0",
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "~3.0.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.3.0",
     "protractor": "~5.4.0",
-    "ts-mockito": "^2.3.1",
-    "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
+    "ts-mockito": "^2.4.2",
+    "ts-node": "~8.3.0",
+    "tsickle": "0.36.0",
+    "tslint": "~5.18.0",
     "typescript": "~3.4.5"
   }
 }
