--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-auth-demo",
-  "version": "0.0.0",
+  "name": "auth-demo",
+  "version": "0.0.9",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
