--- a/projects/auth/package.json
+++ b/projects/auth/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@reyesoft/ngx-auth",
-  "version": "0.0.7",
+  "name": "auth",
+  "version": "0.0.9",
   "peerDependencies": {
     "@angular/common": "^7.1.0",
     "@angular/core": "^7.1.0"
