--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:demo": "ng build",
     "test": "jest",
     "lint": "ng lint",
-    "publish": "yarn build && yarn --scope=reyesoft && yarn publish dist/auth --access public",
+    "publish:lib": "yarn build && yarn --scope=reyesoft && yarn publish dist/auth --access public",
     "e2e": "ng e2e"
   },
   "private": true,
