--- a/package.json
+++ b/package.json
@@ -1,15 +1,44 @@
 {
   "name": "auth-demo",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "npm_pack": "cd dist/auth && npm pack",
+    "copy-license": "copy .\\LICENSE .\\dist\\auth",
+    "copy-readme": "copy .\\README.md .\\dist\\auth",
+    "copy-files": "npm run copy-license && npm run copy-readme",
+    "package": "npm run build_lib && npm run npm_pack",
     "build": "ng build auth",
     "build:prod": "ng build auth --prod",
-    "build:demo": "ng build",
-    "test": "jest",
-    "lint": "ng lint",
-    "publish": "yarn build && yarn --scope=reyesoft && yarn publish dist/auth --access public",
-    "e2e": "ng e2e"
+    "postbuild": "rimraf **/dist/**/*.ngsummary.json",
+    "deploy:builds": "ts-node ./build/deploy-build.ts",
+    "lint": "ng lint auth",
+    "test": "yarn test:lib",
+    "test:lib": "jest --config ./jest.lib.config.js",
+    "test:app": "jest --config ./jest.app.config.js",
+    "clean": "git clean -xdf && yarn && yarn run bootstrap",
+    "cli": "ng",
+    "coverage:html": "nyc report --reporter=html",
+    "copy:dist": "ncp dist/ ./node_modules/auth/",
+    "start": "yarn run demo:start",
+    "demo:start": "yarn run cli serve",
+    "demo:start:aot": "yarn run cli serve -prod",
+    "demo:test": "jest --watch",
+    "demo:test:nowatch": "jest",
+    "demo:build": "yarn build && yarn run copy:dist && yarn cli build --prod --base-href \"/\" --output-path \"./demo-dist\"",
+    "demo:release": "yarn demo:build && ts-node ./build/demo-release.ts",
+    "ci": "yarn run build && yarn run test && yarn test --coverage --silent --runInBand --bail",
+    "watch:tests": "chokidar 'src/**/*.ts' --initial -c 'nyc --reporter=text --reporter=html yarn run test:unit'",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "release": "yarn run build && cd dist && yarn publish",
+    "prettier": "yarn prettier-ts && yarn prettier-md && yarn prettier-scss",
+    "prettier-ts": "yarn prettier-ts:show --write",
+    "prettier-ts:show": "prettier --parser typescript --print-width 140 --tab-width 4 --use-tabs false --single-quote true --trailing-comma none \"src/**/*.ts\"",
+    "prettier-json": "yarn prettier-json:show --write",
+    "prettier-json:show": "prettier --parser json --single-quote es5 --tab-width 4 --print-width 140 --single-quote true \"**/*.json\"",
+    "prettier-md": "yarn prettier-md:show --write",
+    "prettier-md:show": "prettier --parser markdown --single-quote es5 --tab-width 4 --print-width 140 --single-quote true --prose-wrap never \"**/*.md\"",
+    "prettier-scss": "yarn prettier-scss:show --write",
+    "prettier-scss:show": "prettier --parser scss --single-quote es5 --tab-width 4 --print-width 140 --single-quote true \"**/*.scss\"",
+    "precommit": "lint-staged"
   },
   "private": true,
   "dependencies": {
@@ -50,6 +79,9 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^21.0.2",
+    "jest-preset-angular": "^3.0.1",
+    "jest-zone-patch": "^0.0.7",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
