--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
+    "reyesoft-ci": "1.0.3",
     "typescript": "~3.1.6"
   }
 }
