--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "clean": "git clean -xdf && yarn && yarn run bootstrap",
     "cli": "ng",
     "coverage:html": "nyc report --reporter=html",
-    "copy:dist": "ncp dist/ ./node_modules/auth/",
+    "copy:dist": "ncp dist/ ./node_modules/ngx-auth/",
     "start": "yarn run demo:start",
     "demo:start": "yarn run cli serve",
     "demo:start:aot": "yarn run cli serve -prod",
