--- a/package.json
+++ b/package.json
@@ -103,14 +103,15 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ncp": "^2.0.0",
     "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
+    "reyesoft-ci": "1.0.3",
     "ts-mockito": "^2.3.1",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "reyesoft-ci": "1.0.3",
     "typescript": "~3.1.6"
   }
 }
