--- a/projects/auth/package.json
+++ b/projects/auth/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@auth0/angular-jwt": "^2.1.0",
+    "angular2-toaster": "^8.0.0",
     "@ngx-formly/core": "^5.5.6",
     "@ngx-formly/material": "^5.5.6",
     "@ngx-translate/core": "^11.0.1",
