added third party auth

--- a/angular.json
+++ b/angular.json
@@ -141,7 +141,7 @@
       "prefix": "auth",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-ng-packagr:build",z
           "options": {
             "tsConfig": "projects/auth/tsconfig.lib.json",
             "project": "projects/auth/ng-package.json"
