--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular-devkit/build-angular": "0.803.24",
     "@angular-devkit/build-ng-packagr": "~0.802.2",
     "@angular/cli": "~8.3.21",
     "@angular/compiler-cli": "~8.2.14",
