--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build:demo": "ng build",
     "test": "jest",
     "lint": "ng lint",
-    "publish": "yarn build && yarn --scope=reyesoft && yarn publish dist/auth --access public",
+    "publish": "yarn build && sleep 11 && yarn --scope=reyesoft && yarn publish dist/auth --access public",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^7.2.14",
     "@angular/cdk": "^7.3.7",
