--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ci": "yarn run build && yarn run test && yarn test --coverage --silent --runInBand --bail",
     "watch:tests": "chokidar 'src/**/*.ts' --initial -c 'nyc --reporter=text --reporter=html yarn run test:unit'",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "release": "yarn run build && cd dist && yarn publish",
+    "release": "yarn run build && yarn publish dist/auth/",
     "publish:lib": "yarn build && yarn --scope=reyesoft && yarn publish dist/auth --access public",
     "prettier": "yarn prettier-ts && yarn prettier-md && yarn prettier-scss",
     "prettier-ts": "yarn prettier-ts:show --write",
@@ -117,5 +117,6 @@
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~3.5.3"
-  }
+  },
+  "version": "0.0.0"
 }
