--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "angular-oauth2-oidc": "^5.0.2",
     "angular2-toaster": "^8.0.0",
     "core-js": "^2.5.4",
+    "cypress": "^6.0.1",
     "ngx-jsonapi": "^2.1.14",
     "ngx-jsonapi-material": "^0.22.56",
     "ngx-uploader": "^7.1.0",
