ngx-auth-install-cypress auto-commit

--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "angular-oauth2-oidc": "^5.0.2",
     "angular2-toaster": "^8.0.0",
     "core-js": "^2.5.4",
-    "cypress": "^6.0.1",
     "ngx-jsonapi": "^2.1.14",
     "ngx-jsonapi-material": "^0.22.56",
     "ngx-uploader": "^7.1.0",
@@ -95,6 +94,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "cypress": "6.0.1",
     "codelyzer": "~4.5.0",
     "dom-storage": "2.1.0",
     "faker": "^4.1.0",
