--- a/package.json
+++ b/package.json
@@ -58,50 +58,53 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/animations": "9.1.13",
+    "@angular/cdk": "9.2.4",
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/core": "9.1.13",
+    "@angular/flex-layout": "9.0.0-beta.31",
+    "@angular/forms": "9.1.13",
+    "@angular/material": "9.2.4",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
     "@auth0/angular-jwt": "^2.1.0",
-    "@ecodev/fab-speed-dial": "^4.0.0",
+    "@ecodev/fab-speed-dial": "5.0.3",
     "@ngx-formly/core": "^5.5.6",
     "@ngx-formly/material": "^5.5.6",
     "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^6.0.0",
     "angular-oauth2-oidc": "^5.0.2",
     "angular2-toaster": "^8.0.0",
     "core-js": "^2.5.4",
     "ngx-jsonapi": "^2.1.14",
-    "ngx-jsonapi-material": "^0.22.56",
+    "ngx-jsonapi-material": "0.22.70",
     "ngx-uploader": "^7.1.0",
     "rxjs": "~6.5.4",
     "saturn-datepicker": "^7.2.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
-    "@angular-devkit/build-ng-packagr": "~0.801.3",
-    "@angular/cli": "~8.3.21",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "0.901.15",
+    "@angular-devkit/build-ng-packagr": "0.901.15",
+    "@angular/cli": "9.1.15",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/language-service": "9.1.13",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
+    "@types/jest": "24.9.1",
+    "codelyzer": "^5.1.2",
     "cypress": "6.0.1",
-    "codelyzer": "~4.5.0",
     "dom-storage": "2.1.0",
     "faker": "^4.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^21.0.2",
-    "jest-preset-angular": "^3.0.1",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3",
+    "jest-preset-angular": "8.4.0",
     "jest-zone-patch": "^0.0.7",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
@@ -109,14 +112,13 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ncp": "^2.0.0",
-    "ng-packagr": "^4.2.0",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.0",
     "reyesoft-ci": "1.0.3",
     "ts-mockito": "^2.3.1",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
