--- a/package.json
+++ b/package.json
@@ -58,24 +58,24 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "9.1.13",
-    "@angular/cdk": "9.2.4",
-    "@angular/common": "9.1.13",
-    "@angular/compiler": "9.1.13",
-    "@angular/core": "9.1.13",
-    "@angular/flex-layout": "9.0.0-beta.31",
-    "@angular/forms": "9.1.13",
-    "@angular/material": "9.2.4",
-    "@angular/platform-browser": "9.1.13",
-    "@angular/platform-browser-dynamic": "9.1.13",
-    "@angular/router": "9.1.13",
-    "@auth0/angular-jwt": "^2.1.0",
+    "@angular/animations": "10.2.5",
+    "@angular/cdk": "10.2.7",
+    "@angular/common": "10.2.5",
+    "@angular/compiler": "10.2.5",
+    "@angular/core": "10.2.5",
+    "@angular/flex-layout": "10.0.0-beta.32",
+    "@angular/forms": "10.2.5",
+    "@angular/material": "10.2.7",
+    "@angular/platform-browser": "10.2.5",
+    "@angular/platform-browser-dynamic": "10.2.5",
+    "@angular/router": "10.2.5",
+    "@auth0/angular-jwt": "5.0.1",
     "@ecodev/fab-speed-dial": "5.0.3",
     "@ngx-formly/core": "^5.5.6",
     "@ngx-formly/material": "^5.5.6",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^6.0.0",
-    "angular-oauth2-oidc": "^5.0.2",
+    "angular-oauth2-oidc": "10.0.3",
     "angular2-toaster": "^8.0.0",
     "core-js": "^2.5.4",
     "ngx-jsonapi": "^2.1.14",
@@ -83,15 +83,15 @@
     "ngx-uploader": "^7.1.0",
     "rxjs": "~6.5.4",
     "saturn-datepicker": "^7.2.1",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.15",
-    "@angular-devkit/build-ng-packagr": "0.901.15",
-    "@angular/cli": "9.1.15",
-    "@angular/compiler-cli": "9.1.13",
-    "@angular/language-service": "9.1.13",
+    "@angular-devkit/build-angular": "0.1002.3",
+    "@angular-devkit/build-ng-packagr": "0.1002.3",
+    "@angular/cli": "10.2.3",
+    "@angular/compiler-cli": "10.2.5",
+    "@angular/language-service": "10.2.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -100,25 +100,24 @@
     "cypress": "6.0.1",
     "dom-storage": "2.1.0",
     "faker": "^4.1.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
     "jest-preset-angular": "8.4.0",
     "jest-zone-patch": "^0.0.7",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ncp": "^2.0.0",
-    "ng-packagr": "^9.0.0",
-    "protractor": "~5.4.0",
+    "ng-packagr": "^10.1.0",
+    "protractor": "~7.0.0",
     "reyesoft-ci": "1.0.3",
     "ts-mockito": "^2.3.1",
     "ts-node": "~7.0.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.7"
   }
 }
