FE-231-actualizar-a-angular-10 auto-commit

--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     "@angular/language-service": "10.2.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
     "@types/jest": "24.9.1",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "cypress": "6.0.1",
     "dom-storage": "2.1.0",
@@ -114,7 +114,7 @@
     "ncp": "^2.0.0",
     "ng-packagr": "^10.1.0",
     "protractor": "~7.0.0",
-    "reyesoft-ci": "1.0.3",
+    "reyesoft-ci": "^1.1.2",
     "ts-mockito": "^2.3.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
