--- a/package.json
+++ b/package.json
@@ -49,74 +49,75 @@
     "prettier-ts": "yarn prettier-ts:show --write",
     "prettier-ts:show": "prettier --parser typescript --print-width 140 --tab-width 4 --use-tabs false --single-quote true --trailing-comma none \"src/**/*.ts\"",
     "prettier-json": "yarn prettier-json:show --write",
-    "prettier-json:show": "prettier --parser json --single-quote es5 --tab-width 4 --print-width 140 --single-quote true \"**/*.json\"",
+    "prettier-json:show": "prettier --parser json --single-quote --tab-width 4 --print-width 140 --single-quote true \"**/*.json\"",
     "prettier-md": "yarn prettier-md:show --write",
-    "prettier-md:show": "prettier --parser markdown --single-quote es5 --tab-width 4 --print-width 140 --single-quote true --prose-wrap never \"**/*.md\"",
+    "prettier-md:show": "prettier --parser markdown --single-quote --tab-width 4 --print-width 140 --single-quote true --prose-wrap never \"**/*.md\"",
     "prettier-scss": "yarn prettier-scss:show --write",
-    "prettier-scss:show": "prettier --parser scss --single-quote es5 --tab-width 4 --print-width 140 --single-quote true \"**/*.scss\"",
+    "prettier-scss:show": "prettier --parser scss --single-quote --tab-width 4 --print-width 140 --single-quote true \"**/*.scss\"",
     "precommit": "lint-staged"
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@auth0/angular-jwt": "^2.1.0",
-    "@ecodev/fab-speed-dial": "^4.0.0",
+    "@angular/animations": "10.2.5",
+    "@angular/cdk": "10.2.7",
+    "@angular/common": "10.2.5",
+    "@angular/compiler": "10.2.5",
+    "@angular/core": "10.2.5",
+    "@angular/flex-layout": "10.0.0-beta.32",
+    "@angular/forms": "10.2.5",
+    "@angular/material": "10.2.7",
+    "@angular/platform-browser": "10.2.5",
+    "@angular/platform-browser-dynamic": "10.2.5",
+    "@angular/router": "10.2.5",
+    "@auth0/angular-jwt": "5.0.1",
+    "@ecodev/fab-speed-dial": "5.0.3",
     "@ngx-formly/core": "^5.5.6",
     "@ngx-formly/material": "^5.5.6",
     "@ngx-translate/core": "^11.0.1",
-    "angular-oauth2-oidc": "^5.0.2",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "angular-oauth2-oidc": "10.0.3",
     "angular2-toaster": "^8.0.0",
     "core-js": "^2.5.4",
     "ngx-jsonapi": "^2.1.14",
-    "ngx-jsonapi-material": "^0.22.56",
+    "ngx-jsonapi-material": "0.22.70",
     "ngx-uploader": "^7.1.0",
     "rxjs": "~6.5.4",
     "saturn-datepicker": "^7.2.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
-    "@angular-devkit/build-ng-packagr": "~0.801.3",
-    "@angular/cli": "~8.3.21",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "0.1002.3",
+    "@angular-devkit/build-ng-packagr": "0.1002.3",
+    "@angular/cli": "10.2.3",
+    "@angular/compiler-cli": "10.2.5",
+    "@angular/language-service": "10.2.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/jest": "24.9.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "cypress": "6.0.1",
-    "codelyzer": "~4.5.0",
     "dom-storage": "2.1.0",
     "faker": "^4.1.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^21.0.2",
-    "jest-preset-angular": "^3.0.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3",
+    "jest-preset-angular": "8.4.0",
     "jest-zone-patch": "^0.0.7",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ncp": "^2.0.0",
-    "ng-packagr": "^4.2.0",
-    "protractor": "~5.4.0",
-    "reyesoft-ci": "1.0.3",
+    "ng-packagr": "^10.1.0",
+    "protractor": "~7.0.0",
+    "reyesoft-ci": "^1.1.2",
     "ts-mockito": "^2.3.1",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.7"
   }
 }
