--- a/projects/auth/package.json
+++ b/projects/auth/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@reyesoft/ngx-auth",
-  "version": "0.0.26",
+  "version": "0.1.0",
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "peerDependencies": {
     "@angular/animations": ">= 8.0.0",
     "@angular/cdk": ">= 8.0.0",
@@ -25,7 +28,6 @@
     "ngx-uploader": ">= 7.1.0",
     "rxjs": "~6.5.4",
     "saturn-datepicker": "^7.2.1",
-    "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   }
 }
