--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "ci": "yarn run build && yarn run test && yarn test --coverage --silent --runInBand --bail",
     "watch:tests": "chokidar 'src/**/*.ts' --initial -c 'nyc --reporter=text --reporter=html yarn run test:unit'",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "release": "yarn run build && yarn publish dist/auth/",
-    "publish:lib": "yarn build && yarn --scope=reyesoft && yarn publish dist/auth --access public",
+    "release": "yarn build --prod && yarn --scope=reyesoft && yarn publish dist/auth --access public",
     "prettier": "yarn prettier-ts && yarn prettier-md && yarn prettier-scss",
     "prettier-ts": "yarn prettier-ts:show --write",
     "prettier-ts:show": "prettier --parser typescript --print-width 140 --tab-width 4 --use-tabs false --single-quote true --trailing-comma none \"src/**/*.ts\"",
